# order-management-system

./: .gitignore  pyproject.toml
data/: inventory.json  orders.json  products.json
src/oms/application/: add_product.py  cancel_order.py  confirm_order.py  create_order.py  dto.py  fulfill_order.py  set_inventory.py  show_inventory.py  show_order.py  update_product.py
src/oms/domain/: exceptions.py
src/oms/domain/model/: inventory.py  order.py  product.py  value_objects.py
src/oms/domain/repository/: inventory_repository.py  order_repository.py  product_repository.py
src/oms/domain/service/: inventory_reservation_service.py
src/oms/infrastructure/: bootstrap.py
src/oms/infrastructure/cli/: inventory_commands.py  main.py  order_commands.py  product_commands.py
src/oms/infrastructure/persistence/: json_inventory_repository.py  json_order_repository.py  json_product_repository.py
tests/: fakes.py
tests/application/: test_cancel_order.py  test_confirm_order.py  test_create_order.py  test_fulfill_order.py  test_partial_fulfillment.py
tests/domain/: test_fulfill.py  test_inventory.py  test_inventory_reservation_service.py  test_order.py  test_partial_fulfillment.py  test_value_objects.py
