[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oms"
version = "0.1.0"
description = "Order Management System — a DDD learning project"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
oms = "oms.infrastructure.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]
